--- a/public/css/head.css
+++ b/public/css/head.css
@@ -16,6 +16,9 @@
     display: -ms-flexbox;
     display: flex;
   }
+  header ul li:not(.not) {
+    font-size: 20px !important;
+  }
   header ul li {
     cursor: pointer;
     -webkit-box-flex: 1;
@@ -25,12 +28,11 @@
     width: 100%;
     list-style: none;
     display: inline-block;
-    font-size: 20px !important;
   }
   header ul li a {
     color: #eee !important;
   }
-  header ul li:first-child {
+  header ul li:first-child:not(.not) {
     -webkit-box-flex: 2;
     -webkit-flex: 2;
     -ms-flex: 2;
@@ -38,7 +40,7 @@
     width: 100%;
     font-size: 25px !important;
   }
-  header ul li:first-child a {
+  header ul li:first-child:not(.not) a {
     color: #15adbc !important;
   }
   header ul li:hover a {
@@ -67,6 +69,19 @@
   }
   header .index_log .header_welcome {
     color: #15adbc;
+  }
+  header .comeon_choosetry {
+    position: absolute;
+    background-color: #000;
+    color: #fff;
+    font-size: 1.5rem;
+  }
+  header .comeon_head ul {
+    display: none;
+    font-size: 1.5rem;
+  }
+  header .comeon_head li:hover > ul {
+    display: block;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 765px) {
