--- a/public/less/head.less
+++ b/public/less/head.less
@@ -69,7 +69,13 @@ header{
 		color:@color_green;
 	}
 
-
+	.comeon_head_comeon{
+		color:#fff;
+		position: relative;
+	}
+	.comeon_head_comeon:hover{
+		color:@color_green;
+	}
 	.comeon_choosetry{
 		position: absolute;
 		background-color: #000;
