--- a/public/css/onlinepaint.css
+++ b/public/css/onlinepaint.css
@@ -25,7 +25,10 @@ div[type="button"] {
   display: block;
 }
 .mycanvas {
-  border: 5px solid #eee;
+  background-color: #eee;
+  -webkit-box-shadow: 3px 3px 5px;
+  -moz-box-shadow: 3px 3px 5px;
+  box-shadow: 3px 3px 5px;
 }
 .online {
   position: relative;
@@ -108,7 +111,7 @@ li {
 }
 .msgbox .msgboxP {
   padding: 0.2rem 2rem;
-  background-color: #eee;
+  background-color: #ccc;
   opacity: 0.8;
   border-radius: 1rem;
   display: inline-block;
@@ -135,22 +138,31 @@ li {
   position: absolute;
   left: 0;
   top: 0;
-  border: 5px solid #eee;
 }
-.onlineChat .sendPop textarea {
+.sendPop {
+  padding-top: 1rem;
+  height: 3rem;
+}
+.sendPop textarea {
   border: 1px solid #eee;
-  border-radius: 2rem;
-  height: 5rem;
+  width: 10rem;
+  height: 2rem;
+  line-height: 2rem;
+  border-radius: 0.5rem;
   padding: 0 2rem;
+  display: inline-block;
 }
-.onlineChat .sendPop div {
-  width: 30%;
+.sendPop div {
+  vertical-align: top;
+  display: inline-block;
+  width: 10rem;
   height: 2rem;
   line-height: 2rem;
   border-radius: 0.5rem;
   margin: 0 auto;
   text-align: center;
   background-color: #f3c9dd;
+  cursor: pointer;
 }
 .brush {
   position: absolute;
@@ -160,6 +172,20 @@ li {
 }
 .brush div {
   padding: 1rem 0;
+}
+.brush_before {
+  vertical-align: middle;
+  width: 2rem;
+  padding: 0 0.5rem;
+  font-size: 2rem;
+  word-wrap: break-word;
+  letter-spacing: 1rem;
+  height: 7rem;
+  position: absolute;
+  left: -2.4rem;
+  top: 5rem;
+  background-color: #eee;
+  border: 2px solid #eee;
 }
 .palette {
   border: 0px solid #979797;
