--- a/public/less/onlinepaint.less
+++ b/public/less/onlinepaint.less
@@ -42,8 +42,15 @@ div[type="button"]{
 	display: block;
 }
 
+
+
 .mycanvas{
-	border:5px solid #eee;
+	//border:5px solid #eee;
+	background-color: #eee;
+	-webkit-box-shadow: 3px 3px 5px;  
+  	-moz-box-shadow: 3px 3px 5px;  
+  	box-shadow: 3px 3px 5px;
+  	//margin-top: 4rem;
 }
 
 .online{
@@ -137,7 +144,7 @@ li{
 .msgbox{
 	.msgboxP{	
 		padding: 0.2rem 2rem;
-		background-color: #eee;
+		background-color: #ccc;
 		opacity: 0.8;
 		border-radius: 1rem;
 		display: inline-block;
@@ -166,28 +173,38 @@ li{
 	position: absolute;
 	left: 0;
 	top:0;
-	border:5px solid #eee;
-	.sendPop{
-		textarea{
-			border: 1px solid #eee;
-			border-radius: 2rem;
-			height: 5rem;
-			padding:0 2rem;
-		}
-		
-		div{
-			width: 30%;
-			height: 2rem;
-			line-height: 2rem;
-			border-radius: 0.5rem;
-			margin: 0 auto;
-			text-align: center;
-			background-color: @color_pink;
-		}
+	//border:5px solid #eee;
+}
+
+.sendPop{
+	padding-top: 1rem;
+	height: 3rem;	
+	textarea{
+		border: 1px solid #eee;
+		width: 10rem;
+		height: 2rem;
+		line-height: 2rem;
+		border-radius: 0.5rem;
+		padding:0 2rem;
+		display: inline-block;
+	}
+	
+	div{
+		vertical-align: top;
+		display: inline-block;
+		width: 10rem;
+		height: 2rem;
+		line-height: 2rem;
+		border-radius: 0.5rem;
+		margin: 0 auto;
+		text-align: center;
+		background-color: @color_pink;
+		cursor: pointer;
 	}
 }
 
 .brush{
+	//display: none;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -195,6 +212,21 @@ li{
 	div{
 		padding:1rem 0;
 	}
+}
+
+.brush_before{
+	vertical-align: middle;
+	width: 2rem;
+	padding: 0 0.5rem;
+	font-size: 2rem;
+	word-wrap:break-word;
+	letter-spacing: 1rem;
+	height: 7rem;
+	position: absolute;
+	left: -2.4rem;
+	top:5rem;
+	background-color: #eee;
+	border: 2px solid #eee;
 }
 
 .palette{
@@ -314,6 +346,7 @@ li{
 		}
 	}
 }
+
 
 .brushwidth{
 	.border();
