--- a/public/less/onlinepaint.less
+++ b/public/less/onlinepaint.less
@@ -100,6 +100,16 @@ div[type="button"]{
 
 .hidechooseroom_id{
 	display: none;
+	input{
+		width: 10rem;
+		height: 3rem;
+		border:2px solid #000;
+		text-align: center;
+		display: inline-block;
+		line-height: 3rem;
+	    cursor: pointer;
+	    margin-top: 2rem; 
+	}
 }
 
 .chooseroom_id{
@@ -120,6 +130,10 @@ li{
 	position: absolute;
 	bottom: 0;
 	left: 0;
+	background-color: #eee;
+	-webkit-box-shadow: 3px 3px 5px;  
+  	-moz-box-shadow: 3px 3px 5px;  
+  	box-shadow: 3px 3px 5px;
 }
 
 @keyframes pop{
