--- a/public/less/comeon.less
+++ b/public/less/comeon.less
@@ -71,6 +71,30 @@ html,body{
 			}
 		}		
 	}
+
+	.comeon_head_comeon{
+		color:#fff;
+		position: relative;
+	}
+	.comeon_head_comeon:hover{
+		color:@color_green;
+	}
+	.comeon_choosetry{
+		position: absolute;
+		background-color: #000;
+		color: #fff;
+		//position: absolute;
+		font-size: 1.5rem;
+	}
+	.comeon_head{
+		ul{
+			display:none;
+			font-size: 1.5rem;
+		}
+		 li:hover > ul{
+		 	display: block;
+		 }
+	}
 }
 
 @media screen and (min-width:320px) and (max-width:765px){
@@ -124,12 +148,31 @@ html,body{
 		.comeon_pic_show{
 			display: none;
 		}
-}
+	}
+	.comeon_head{
+		li:nth-child(2):not(.not),li:nth-child(4),li:nth-child(5){
+			display: none;
+		}
+		li:nth-child(3){
+			height: 10rem;
+			margin-top: -5rem;
+			font-size: 0;
+			line-height: 5rem;
+			ul{
+				font-size: 1rem;
+				li:first-child{
+					display: none;
+				}
+			}
+		}
+	}
+	header{
+		height: 10rem;
+	}
 
 }
 .container{
 	width: 100%;
-	height: 100%;
 }
 
 @-webkit-keyframes hat {
