--- a/public/less/onlinepaint.less
+++ b/public/less/onlinepaint.less
@@ -14,9 +14,12 @@
 
 html{
 	font-size: 10px;
+	width: 100%;
 }
 body{
 	position: relative;
+	width: 100%;
+	overflow: hidden;
 }
 
 div[type="button"]{
@@ -126,15 +129,156 @@ li{
 	cursor: pointer;
 }
 
-.paintSave{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	background-color: #eee;
-	-webkit-box-shadow: 3px 3px 5px;  
-  	-moz-box-shadow: 3px 3px 5px;  
-  	box-shadow: 3px 3px 5px;
+@media screen and (min-width:765px){
+	.paintSave{
+		display: none;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		background-color: #eee;
+		-webkit-box-shadow: 3px 3px 5px;  
+	  	-moz-box-shadow: 3px 3px 5px;  
+	  	box-shadow: 3px 3px 5px;
+	  	z-index: 100;
+	  	width: 10rem;
+		height: 8rem;
+		border:2px solid #000;
+	}
+	.paintSaveWrap{
+		display: none;
+		width: 100%;
+		height: 100%;
+		background-color: #fff;
+		opacity: 0.8;
+		position: absolute;
+		top:0;
+		left:0;
+		z-index: 99;
+	}
+	.brush{
+		//display: none;
+		position: absolute;
+		right: 0;
+		top: 0;
+		border:5px solid #eee;
+		div{
+			padding:1rem 0;
+		}
+	}
+
+	.brush_before{
+		vertical-align: middle;
+		width: 2rem;
+		padding: 0 0.5rem;
+		font-size: 2rem;
+		word-wrap:break-word;
+		letter-spacing: 1rem;
+		height: 7rem;
+		position: absolute;
+		left: -2.4rem;
+		top:5rem;
+		background-color: #eee;
+		border: 2px solid #eee;
+	}
+
+	.palette{
+		li{
+			width:2rem;
+			height: 2rem;
+			display: inline-block;
+			margin-left: 0.5rem;
+			font-size: 0;
+		}
+	}
+	.brushwidth{
+		li{
+			width:4.5rem;
+			height: 2rem;
+			line-height: 2rem;
+			text-align: center;
+			display: inline-block;
+			margin-left: 0.5rem;
+		}
+	}
+	.tool{
+		li{
+			margin-left: 0.5rem;
+		}
+	}
+
+	.tool2{
+		li{
+			margin-left: 0.5rem;
+		}
+	}
 }
+
+@media screen and (min-width:320px) and (max-width:765px){
+	ul{
+		display: inline-block;
+	}
+	ul:nth-child(7){
+		text-align: left;
+	}
+	.paintSaveWrap{
+		display: none;
+	}
+	.paintSave{
+		display: none;
+	}
+	.brush{
+		//display: none;
+		position: absolute;
+		right: 0;
+		//bottom: 0;
+		border:5px solid #eee;
+		div{
+			padding:0.5rem 0;
+		}
+	}
+
+	.brush_before{
+		display: none;
+	}
+
+	.palette{
+		li{
+			width:2rem;
+			height: 2rem;
+			display: inline-block;
+			font-size: 0;
+		}
+	}
+	#finish{
+		display: none;
+	}
+	.brushwidth{
+		li{
+			width:4.5rem;
+			height: 2rem;
+			line-height: 2rem;
+			text-align: center;
+			display: inline-block;
+			//margin-left: 0.5rem;
+		}
+	}
+	.tool{
+		display: inline-block;
+		li{
+			margin-left: 0rem;
+		}
+	}
+
+	.tool2{
+		display: inline-block;
+		li{
+			margin-left: 0rem;
+		}
+	}
+	
+}
+
+
 
 @keyframes pop{
   0% {
@@ -187,7 +331,6 @@ li{
 	position: absolute;
 	left: 0;
 	top:0;
-	//border:5px solid #eee;
 }
 
 .sendPop{
@@ -217,41 +360,10 @@ li{
 	}
 }
 
-.brush{
-	//display: none;
-	position: absolute;
-	right: 0;
-	top: 0;
-	border:5px solid #eee;
-	div{
-		padding:1rem 0;
-	}
-}
 
-.brush_before{
-	vertical-align: middle;
-	width: 2rem;
-	padding: 0 0.5rem;
-	font-size: 2rem;
-	word-wrap:break-word;
-	letter-spacing: 1rem;
-	height: 7rem;
-	position: absolute;
-	left: -2.4rem;
-	top:5rem;
-	background-color: #eee;
-	border: 2px solid #eee;
-}
 
 .palette{
 	.border();
-	li{
-		width:2rem;
-		height: 2rem;
-		display: inline-block;
-		margin-left: 0.5rem;
-		font-size: 0;
-	}
 	.palette_one{
 		li:nth-child(1){
 			background-color: #8a2be2;
@@ -365,12 +477,6 @@ li{
 .brushwidth{
 	.border();
 	li{
-		width:4.5rem;
-		height: 2rem;
-		line-height: 2rem;
-		text-align: center;
-		display: inline-block;
-		margin-left: 0.5rem;
 		background: -moz-linear-gradient(top, #fff 0%, #ccc 100%) no-repeat;
 	    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#ccc) no-repeat);
 	    background: -webkit-linear-gradient(top, c4e1ff 0%,#ccc 100%) no-repeat;
@@ -388,7 +494,6 @@ li{
 		line-height: 2rem;
 		text-align: center;
 		display: inline-block;
-		margin-left: 0.5rem;
 	}
 	li:first-child{
 		background-color: #ffc0cb;
@@ -406,7 +511,6 @@ li{
 		line-height: 2rem;
 		text-align: center;
 		display: inline-block;
-		margin-left: 0.5rem;
 		border: 1px solid #eee;
 	}
 	li:first-child{
@@ -414,8 +518,4 @@ li{
 	}
 }
 
-#finish{
-	width: 10rem;
-	height: 8rem;
-	border:2px solid #000;
-}
+
