--- a/public/css/onlinepaint.css
+++ b/public/css/onlinepaint.css
@@ -1,6 +1,6 @@
 html {
-  font-size: 10px;
   width: 100%;
+  height: 100%;
 }
 body {
   position: relative;
@@ -99,6 +99,9 @@ li {
   cursor: pointer;
 }
 @media screen and (min-width: 765px) {
+  html {
+    font-size: 12px;
+  }
   .paintSave {
     display: none;
     position: absolute;
@@ -137,7 +140,7 @@ li {
     vertical-align: middle;
     width: 2rem;
     padding: 0 0.5rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     word-wrap: break-word;
     letter-spacing: 1rem;
     height: 7rem;
@@ -170,6 +173,9 @@ li {
   }
 }
 @media screen and (min-width: 320px) and (max-width: 765px) {
+  html {
+    font-size: 8px;
+  }
   ul {
     display: inline-block;
   }
