--- a/public/less/onlinepaint.less
+++ b/public/less/onlinepaint.less
@@ -13,8 +13,8 @@
 }
 
 html{
-	font-size: 10px;
 	width: 100%;
+	height: 100%;
 }
 body{
 	position: relative;
@@ -130,6 +130,9 @@ li{
 }
 
 @media screen and (min-width:765px){
+	html{
+		font-size: 12px;
+	}
 	.paintSave{
 		display: none;
 		position: absolute;
@@ -170,7 +173,7 @@ li{
 		vertical-align: middle;
 		width: 2rem;
 		padding: 0 0.5rem;
-		font-size: 2rem;
+		font-size: 1.5rem;
 		word-wrap:break-word;
 		letter-spacing: 1rem;
 		height: 7rem;
@@ -214,6 +217,9 @@ li{
 }
 
 @media screen and (min-width:320px) and (max-width:765px){
+	html{
+		font-size: 8px;
+	}
 	ul{
 		display: inline-block;
 	}
